# Floating-Top-K-Vision

./: .gitignore  CMakeLists.txt  README.md  config.txt  testing.ipynb
.github/workflows/: macos-portable.yml
data/VIDEO_BINARIZZATI/: 0.avi  1.avi  2.avi
include/: CircularVector.hpp  DataHandler.hpp  FTK.hpp  GeometricSampling.hpp  GlobalSettings.hpp  IndexedMinHeap.hpp  ThreadPool.hpp  fast_vector.hpp
src/: simul_multi_file.cpp
